--- a/src/NetFlix.css
+++ b/src/NetFlix.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Martel+Sans&display=swap");
 
+@import url("https://pro.fontawesome.com/releases/v5.10.0/css/all.css");
+
 * {
   box-sizing: border-box;
   padding: 0;
