--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -16,7 +16,7 @@
 
 #AuthBlock article main {
   background: #000;
-  height: 400px;
+  height: auto;
   width: 35%;
   padding: 30px 50px;
 }
@@ -56,4 +56,71 @@
 }
 ::placeholder {
   color: #fff;
+}
+
+.loginDesc {
+  margin-top: -20px;
+}
+.needHelp {
+  display: flex;
+  font-size: 12px;
+  text-transform: capitalize;
+}
+
+.needHelp span {
+  flex: 1;
+}
+.needHelp span input[type="checkbox"] {
+  width: auto !important;
+}
+.needHelp b {
+  margin: -6px 1px;
+  color: #999;
+  position: relative;
+  top: -2px;
+}
+
+.needHelp span:nth-child(2) {
+  text-align: right;
+  margin: 4px 2px;
+}
+.needHelp span:nth-child(2) a {
+  color: #999;
+  text-decoration: none;
+}
+.needHelp span:nth-child(2) a:hover {
+  text-decoration: underline;
+}
+.loginDesc footer {
+  color: #999;
+  font-size: 13px;
+  margin: 10px 0px;
+}
+
+.loginDesc footer i {
+  background: #4267b2 !important;
+  font-size: 16px;
+  margin: 0 10px 0 0;
+  width: 25px;
+  height: 25px;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 3px;
+}
+
+.loginDesc footer > div {
+  display: flex;
+}
+
+.loginDesc footer > div:nth-child(2) {
+  padding: 10px 0;
+  width: 100%;
+  display: block;
+}
+
+.loginDesc footer > div:nth-child(2) a {
+  color: #fff;
+  font-size: 16px;
+  text-decoration: none;
+  padding-left: 5px;
 }
