--- a/src/Components/Auth/Auth.css
+++ b/src/Components/Auth/Auth.css
@@ -124,3 +124,41 @@
   text-decoration: none;
   padding-left: 5px;
 }
+
+.otpLink {
+  color: #fff;
+  text-decoration: none;
+  background: #111;
+  padding: 2px 10px;
+  border-bottom: 1px solid red;
+  width: 100%;
+  display: block;
+  margin: 10px 0;
+  font-size: 12px;
+}
+.otpLink:hover {
+  background-color: red;
+  color: #fff;
+}
+
+.or {
+  width: 36px;
+  height: 36px;
+  background: red;
+  text-align: center;
+  border-radius: 100%;
+  line-height: 39px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.orBlock {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 11px;
+  flex-direction: column;
+  align-items: center;
+}
